--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,12 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "rsuite": "^4.9.4",
-    "use-dark-mode": "^2.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
