--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-iframe": "^1.8.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "rsuite": "^4.9.4",
