--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://localhost:3030/",
   "browserslist": {
     "production": [
       ">0.2%",
