--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --detectOpenHandles --watchAll --verbose --forceExit --coverage --runInBand ./tests",
     "start": "node index.js"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "timers": "fake"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +19,8 @@
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.6",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3"
   }
 }
