--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "anime-scraper": "^3.1.3",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.6",
     "cors": "^2.8.5",
+    "ctk-anime-scraper": "^2.0.0",
     "express": "^4.17.1",
     "jest": "^26.6.3",
     "supertest": "^6.1.3"
