--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-iframe": "^1.8.0",
+    "react-multi-carousel": "^2.6.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "rsuite": "^4.9.4",
