--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Stream Your favourite anime",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "start:dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +24,7 @@
   },
   "homepage": "https://github.com/Dovakiin0/animeworldz#readme",
   "dependencies": {
-    "@dovakiin0/anime-data": "^1.3.0",
+    "@dovakiin0/anime-data": "^1.5.1",
     "cors": "^2.8.5",
     "express": "^4.17.1"
   }
