--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/Dovakiin0/animeworldz#readme",
   "dependencies": {
     "@dovakiin0/anime-data": "^1.5.1",
+    "apicache": "^1.6.2",
     "cors": "^2.8.5",
     "express": "^4.17.1"
   }
