--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "react-iframe": "^1.8.0",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
