style fixes and added pwa

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "animeworldz-next",
+  "name": "kitsune-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^8.3.0",
     "@types/node": "18.15.13",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
