--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.11",
     "@videojs/themes": "^1.0.1",
     "autoprefixer": "10.4.14",
+    "cheerio": "^1.0.0-rc.12",
     "daisyui": "^2.51.5",
     "next": "13.3.0",
     "postcss": "8.4.23",
