--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-responsive-carousel": "^3.2.23",
+    "rss-parser": "^3.13.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
     "video.js": "^8.0.4"
