--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-responsive-masonry": "^2.1.7",
     "rss-parser": "^3.13.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
     "video.js": "^8.0.4"
   },
   "devDependencies": {
+    "@types/react-responsive-masonry": "^2.1.0",
     "@types/video.js": "^7.3.51"
   }
 }
