--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@types/node": "18.15.13",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
-    "@videojs/themes": "^1.0.1",
+    "artplayer": "^5.0.2",
     "autoprefixer": "10.4.14",
     "cheerio": "^1.0.0-rc.12",
     "daisyui": "^2.51.5",
+    "hls.js": "^1.4.0",
     "next": "13.3.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -26,11 +27,9 @@
     "react-responsive-masonry": "^2.1.7",
     "rss-parser": "^3.13.0",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4",
-    "video.js": "^8.0.4"
+    "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/react-responsive-masonry": "^2.1.0",
-    "@types/video.js": "^7.3.51"
+    "@types/react-responsive-masonry": "^2.1.0"
   }
 }
