--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.14",
     "cheerio": "^1.0.0-rc.12",
     "daisyui": "^2.51.5",
+    "framer-motion": "^10.12.4",
     "hls.js": "^1.4.0",
     "next": "13.3.0",
     "postcss": "8.4.23",
