--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.15.13",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
+    "@vercel/kv": "^0.1.1",
     "artplayer": "^5.0.2",
     "autoprefixer": "10.4.14",
     "cheerio": "^1.0.0-rc.12",
