--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-responsive-masonry": "^2.1.7",
     "rss-parser": "^3.13.0",
+    "sharp": "^0.32.1",
     "string-similarity": "^4.0.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
