--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@consumet/extensions": "^1.4.17",
     "@ducanh2912/next-pwa": "^8.3.0",
     "@types/node": "20.1.0",
     "@types/react": "18.2.6",
