--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@vercel/kv": "^0.1.1",
     "artplayer": "^5.0.6",
     "autoprefixer": "10.4.14",
-    "cheerio": "^1.0.0-rc.12",
     "daisyui": "^2.51.6",
     "framer-motion": "^10.12.8",
     "hls.js": "^1.4.1",
+    "html-react-parser": "^3.0.16",
     "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
