--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@consumet/extensions": "https://github.com/consumet/consumet.ts.git",
+    "@consumet/extensions": "^1.5.0",
     "@ducanh2912/next-pwa": "^8.3.0",
     "@types/node": "20.1.0",
     "@types/react": "18.2.6",
