--- a/package.json
+++ b/package.json
@@ -9,31 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@consumet/extensions": "git+https://github.com/consumet/consumet.ts.git",
-    "@ducanh2912/next-pwa": "^8.3.0",
+    "@consumet/extensions": "github:consumet/consumet.ts",
+    "@ducanh2912/next-pwa": "^8.7.1",
     "@types/node": "20.1.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
-    "@vercel/kv": "^0.1.1",
-    "artplayer": "^5.0.6",
+    "@vercel/kv": "^0.1.2",
+    "artplayer": "^5.0.9",
     "autoprefixer": "10.4.14",
-    "daisyui": "^2.51.6",
-    "framer-motion": "^10.12.8",
-    "hls.js": "^1.4.1",
+    "daisyui": "^2.52.0",
+    "framer-motion": "^10.16.5",
+    "hls.js": "^1.4.12",
     "html-react-parser": "^3.0.16",
     "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.12.0",
     "react-responsive-carousel": "^3.2.23",
     "react-responsive-masonry": "^2.1.7",
     "rss-parser": "^3.13.0",
-    "sharp": "^0.32.1",
+    "sharp": "^0.32.6",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/react-responsive-masonry": "^2.1.0"
+    "@types/react-responsive-masonry": "^2.1.3"
   }
 }
