--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hls.js": "^1.4.12",
     "html-react-parser": "^3.0.16",
     "next": "13.4.1",
+    "nextjs-progressloader": "^1.2.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
