--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "@sentry/nextjs": "^8.34.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
