--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "artplayer": "^5.1.7",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
+    "hls.js": "^1.5.17",
     "html-react-parser": "^5.1.18",
     "lucide": "^0.447.0",
     "lucide-react": "^0.447.0",
