--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
-    "artplayer": "^5.1.7",
+    "artplayer": "^5.2.1",
+    "artplayer-plugin-ambilight": "^1.0.0",
+    "artplayer-plugin-hls-control": "^1.0.1",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -44,4 +46,3 @@
     "typescript": "^5"
   }
 }
-
