--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lucide": "^0.447.0",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
