--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@sentry/nextjs": "^8.47.0",
     "artplayer": "^5.2.1",
     "artplayer-plugin-ambilight": "^1.0.0",
     "artplayer-plugin-hls-control": "^1.0.1",
