--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "artplayer": "^5.2.1",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "aniwatch": "^2.18.3",
+    "artplayer": "^5.2.2",
     "artplayer-plugin-ambilight": "^1.0.0",
     "artplayer-plugin-hls-control": "^1.0.1",
     "axios": "^1.7.7",
@@ -23,19 +24,20 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.11.17",
-    "hls.js": "^1.5.17",
+    "hls.js": "^1.5.20",
     "html-react-parser": "^5.1.18",
     "lucide": "^0.447.0",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "next-pwa": "^5.6.0",
+    "next-runtime-env": "^3.2.2",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-query": "^3.39.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
