--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.2.0",
     "aniwatch": "^2.18.3",
     "artplayer": "^5.2.2",
     "artplayer-plugin-ambilight": "^1.0.0",
@@ -28,13 +31,15 @@
     "html-react-parser": "^5.1.18",
     "lucide": "^0.447.0",
     "lucide-react": "^0.447.0",
-    "next": "14.2.14",
+    "next": "15.3.0",
     "next-pwa": "^5.6.0",
     "next-runtime-env": "^3.2.2",
     "next-themes": "^0.3.0",
+    "pocketbase": "^0.25.2",
     "react": "^18",
     "react-dom": "^18",
     "react-query": "^3.39.3",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.3"
