--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -20,7 +20,7 @@
     "@radix-ui/react-switch": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
-    "aniwatch": "^2.18.3",
+    "aniwatch": "^2.23.0",
     "artplayer": "^5.2.2",
     "artplayer-plugin-ambilight": "^1.0.0",
     "artplayer-plugin-hls-control": "^1.0.1",
@@ -39,6 +39,7 @@
     "next-themes": "^0.3.0",
     "pocketbase": "^0.25.2",
     "react": "^18",
+    "react-calendar-heatmap": "^1.10.0",
     "react-dom": "^18",
     "react-query": "^3.39.3",
     "sonner": "^2.0.3",
@@ -49,9 +50,12 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-calendar-heatmap": "^1.9.0",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
