--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-menubar": "^1.1.15",
     "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-select": "^2.1.7",
@@ -38,9 +39,9 @@
     "next-runtime-env": "^3.2.2",
     "next-themes": "^0.3.0",
     "pocketbase": "^0.25.2",
-    "react": "^18",
+    "react": "^18.3.0",
     "react-calendar-heatmap": "^1.10.0",
-    "react-dom": "^18",
+    "react-dom": "^18.3.0",
     "react-query": "^3.39.3",
     "react-tooltip": "^5.28.1",
     "sonner": "^2.0.3",
