fix: error boundary for no source

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_PROXY_URL=http://localhost:4040
-NEXT_PUBLIC_POCKETBASE_URL=http://localhost:8090
+NEXT_PUBLIC_PROXY_URL=https://proxy.kitsunee.online
+NEXT_PUBLIC_POCKETBASE_URL=https://pb.kitsunee.online
 NODE_ENV=development
