--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_PROXY_URL=https://proxy.kitsunee.online
-NEXT_PUBLIC_POCKETBASE_URL=https://pb.kitsunee.online
+NEXT_PUBLIC_PROXY_URL=http://localhost:8080
+NEXT_PUBLIC_POCKETBASE_URL=http://localhost:8090
 NODE_ENV=development
