--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.0",
-    "aniwatch": "git+https://github.com/Craftingnerf/aniwatch.git#bug/MegacloudDecrypt",
+    "aniwatch": "^2.23.5",
     "artplayer": "^5.2.2",
     "artplayer-plugin-ambilight": "^1.0.0",
     "artplayer-plugin-hls-control": "^1.0.1",
